New files added.

--- a/sys.config
+++ b/sys.config
@@ -29,11 +29,27 @@
 	 %%
 	 %% you need to set the db backend (COUCHDB or RIAK)
 	 %% in src/ebot.hrl file
-	 {db_hostname, "127.0.0.1"},
+
+	 
 	 %% COUCHDB
+	 %%{db_hostname, "127.0.0.1"},	 
 	 %%{db_port, 5984},
+
 	 %% RIAK 
-	 {db_port, 8087},
+	 %% {db_hostname, "127.0.0.1"},	 
+	 %%{db_port, 8087},
+
+	 %% MONGODB
+	 %{db_hostname, localhost},
+	 %{db_port, 27017},
+	 %{db_name, mo_ads_development},
+
+	 %% PostgreSQL
+	 {db_hostname, "localhost"},
+	 {db_login, "umedia"},
+	 {db_password, "123"},	
+	 {db_name, "mo_ads_development"},
+	 {db_port, 5432},	
 
 	 %% %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 	 %% MQ
@@ -340,8 +356,36 @@
 	 %% this option is useful in order to avoid heavy workloads for the visited websites
 	 %% and for the ebot system if the hardware is not enough powerful
 
-	 {workers_sleep_time, 2000}
-		 
+	 {workers_sleep_time, 4000},
+
+
+	 %%-----------------------------------------------------------------------
+	 %% Max urls count to process for a site.
+	 %% ----------------------------------------------------------------------
+	 % {site_urls_threshold, 100}, 
+
+	 %%-----------------------------------------------------------------------
+	 %% SITE CRAWLING LIFE_CYCLE EVENTS LISTENER URL
+	 %% -----------------------------------------------------------------------
+	 {site_events_listener_url, "http://localhost:3000/api/events"},
+
+	 %%-----------------------------------------------------------------------
+	 %% ELASTIC SEARCH
+	 %% -----------------------------------------------------------------------
+	 {elastic_search, 
+	    { url, [{host, "localhost"}, {port, "9200"}] }
+	  },
+
+         %%-----------------------------------------------------------------------
+	 %% Strategy for creating/deleting EbotWeb workers.
+	 %% -----------------------------------------------------------------------
+ 	 {ebot_web_mgmt_strategy, ebot_web_mgmt_default_strategy},
+ 	 %% {ebot_web_mgmt_strategy, ebot_web_mgmt_per_site_strategy}
+
+ 	 {access_log_file, "priv/log/ebot_request.log"},
+
+ 	 {urls_per_hour_for_site, 2}
+
 	]
  }
 ].
